--- a/src/classes/Edgemart.cls
+++ b/src/classes/Edgemart.cls
@@ -3,4 +3,5 @@ public class Edgemart {
 	public String Label;
 	public String MetadataJsonUrl;
 	public String DataUrl;
+    public String XmdUrl;
 }
