--- a/src/classes/WaveDataset.cls
+++ b/src/classes/WaveDataset.cls
@@ -1,5 +1,9 @@
 public class WaveDataset extends WaveAsset {
-	public override String getAssetType(){
+	public String currentVersionId;
+    public String currentVersionUrl;
+    public String versionsUrl;
+    
+    public override String getAssetType(){
 		return 'Dataset';
 	}
 }
